--- a/src/App.css
+++ b/src/App.css
@@ -1,18 +1,16 @@
 /* Customize your main colors in :root variables */
 :root {
-  --main-background-color: #343A50;
-  --card-background-color: #804980;
-  --countdown-background-color: #433765;
+  --main-background-color: #00DBDE;
+  --card-background-color: #640d64;
+  --countdown-background-color: #8976bd;
   --main-text-color:#F7F6F4;
-  --title-text-color:#3CBA8B;
+  --title-text-color:#ffffff;
 }
 
 body{
-/*  background-color:var(--main-background-color);*/
-  background: url("img/background.png");
-  background-size: cover;
-  font-family: 'Patrick Hand', cursive;
-  font-size: 1.1em;
+  background-color:var(--main-background-color);
+background-image: linear-gradient(90deg, #00DBDE 0%, #FC00FF 100%);
+
 }
 
 h2, p{
